[workspace]
members = [
    "intel-sgx/aesm-client",
    "intel-sgx/dcap-provider",
    "intel-sgx/dcap-ql-sys",
    "intel-sgx/dcap-ql",
    "intel-sgx/dcap-retrieve-pckid",
    "intel-sgx/enclave-runner",
    "intel-sgx/fortanix-sgx-abi",
    "intel-sgx/fortanix-sgx-tools",
    "intel-sgx/report-test",
    "intel-sgx/sgxs",
    "intel-sgx/sgx-isa",
    "intel-sgx/sgx_pkix",
    "intel-sgx/sgxs-loaders",
    "intel-sgx/sgxs-tools",
    "ipc-queue",
    "rs-libc",
]
exclude = ["examples"]

[patch.crates-io]
libc  = { git = "https://github.com/fortanix/libc.git", branch = "fortanixvme" }
mbedtls = { git = "https://github.com/fortanix/rust-mbedtls", branch = "master" }
nix   = { git = "https://github.com/fortanix/nix.git", branch = "raoul/fortanixvme_r0.20.2" }
serde = { git = "https://github.com/fortanix/serde.git", branch = "master" }
vsock = { git = "https://github.com/fortanix/vsock-rs.git", branch = "fortanixvme" }
rustc-serialize = { git = "https://github.com/jethrogb/rustc-serialize.git", branch = "portability" }
